# rust_search_cli

./: Cargo.toml
src/: main.rs
