[package]
name = "rust_search_cli"
version = "0.1.0"
edition = "2024"
authors = ["Lokai Kuroi <lokai.kuroi@gmail.com>", "Jan Grewe <jangrewe@smail.hs-bremerhaven.de>"]
license = "MIT"
description = "Search for a String given to the program in folder and file names recursively"
homepage = "https://github.com/lokai-kuroi/rust_search_cli"
repository = "https://github.com/lokai-kuroi/rust_search_cli"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"
exitcode = "1.1.2"
human-panic = "2.0.8"
is-terminal = "0.4.17"
